Fix contrast a11y for secondary color

--- a/agnostic-css/public/css-dist/common.concat.css
+++ b/agnostic-css/public/css-dist/common.concat.css
@@ -104,15 +104,14 @@ th {
   --agnostic-primary-light: #dcf1ff;
   --agnostic-primary-border: #c1d9e9;
   --agnostic-primary-dark: #063f69;
-  --agnostic-secondary: #df685b;
-  --agnostic-secondary-from: #aa4539;
-  --agnostic-secondary-to: #d66154;
-  --agnostic-secondary-hover: #f57a6c;
+  --agnostic-secondary: #c94d2b;
+  --agnostic-secondary-from: #a33e23;
+  --agnostic-secondary-to: #bc583d;
+  --agnostic-secondary-hover: #bc583d;
   --agnostic-action: #2fb751;
   --agnostic-action-light: #e2ffe9;
   --agnostic-action-border: #c7f0d1;
   --agnostic-action-from: #198333;
-  /* --agnostic-action-from: #20913c; */
   --agnostic-action-to: #41d466;
   --agnostic-action-hover: #3dd262;
   --agnostic-warning-light: #fff5d4;
