--- a/agnostic-css/public/css-src/colors.css
+++ b/agnostic-css/public/css-src/colors.css
@@ -12,10 +12,10 @@
   --agnostic-primary-light: #dcf1ff;
   --agnostic-primary-border: #c1d9e9;
   --agnostic-primary-dark: #063f69;
-  --agnostic-secondary: #df685b;
-  --agnostic-secondary-from: #aa4539;
-  --agnostic-secondary-to: #d66154;
-  --agnostic-secondary-hover: #f57a6c;
+  --agnostic-secondary: #c94d2b;
+  --agnostic-secondary-from: #a33e23;
+  --agnostic-secondary-to: #bc583d;
+  --agnostic-secondary-hover: #bc583d;
   --agnostic-action: #2fb751;
   --agnostic-action-light: #e2ffe9;
   --agnostic-action-border: #c7f0d1;
